--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "ionic-vue-mobile-template-01",
-  "description": "Hybrid app template built with vue, ionic and capacitor",
-  "author": "Simo Mafuxwana - @dlodeprojuicer",
-  "version": "0.2.0",
+  "name": "ionicvuetemplate08",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,31 +10,35 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/core": "^2.4.1",
-    "@capacitor/ios": "^2.4.1",
+    "@capacitor/android": "^2.4.2",
+    "@capacitor/core": "2.4.2",
+    "@capacitor/ios": "^2.4.2",
+    "@ionic/cli": "^6.12.2",
+    "@ionic/pwa-elements": "^3.0.1",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
-    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
-    "ionic-vue-form": "^1.2.2",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.2",
-    "vue": "3.0.0",
-    "vue-chartjs": "^3.5.1",
-    "vue-router": "^4.0.0-beta.9"
+    "global": "^4.4.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "vue": "^3.0.0-0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "^2.4.1",
-    "@vue/cli-plugin-babel": "^4.5.4",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.4",
-    "@vue/cli-plugin-eslint": "^4.5.4",
-    "@vue/cli-plugin-router": "^4.5.4",
-    "@vue/cli-plugin-unit-jest": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
-    "@vue/compiler-sfc": "^3.0.0-rc.10",
-    "@vue/test-utils": "^2.0.0-beta.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.0.0-beta.3",
-    "vue-jest": "^5.0.0-alpha.3"
-  }
+    "@capacitor/cli": "2.4.2",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/test-utils": "^2.0.0-0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "vue-jest": "^5.0.0-0"
+  },
+  "description": "Ionic Vue Template 08"
 }
